--- a/my/parts/chapter1.tex
+++ b/my/parts/chapter1.tex
@@ -1,3 +1,4 @@
+%-*- coding: cp1251 -*-
 \chapter{Обзор предметной области}
 \label{chapter1}
 
@@ -121,7 +122,7 @@ sequence alignment)
 определение первичной последовательности.
 
 В современной интерпретации, метод обрыва цепи позволяет секвенировать за один этап последовательность
-ДНК длиной около 800-1000 нуклеотидов.
+ДНК длиной около 800-1000 нуклеотидов \cite{sanger}.
 
 %\subsection{Метод пиросеквенирования}
 
@@ -131,7 +132,8 @@ sequence alignment)
 Современные методы секвенирования ориентированы на снижение цены и увеличение пропускной способности.
 При этом уменьшается длина считываемого фрагмента. Часть методов позволяет прочитать
 короткие куски начала и конца длинного фрагмента, то есть получить дополнительную информацию
-о ``спаренности'' полученных чтений (так называемые paired-end данные).
+о ``спаренности'' полученных чтений (так называемые paired-end данные)
+\cite{nextgen}.
 
 \section{Методы секвенирования длинных последовательностей}
 
@@ -148,7 +150,7 @@ sequence alignment)
 секвенировать каждый отдельно. После этого различными способами по полученным данным восстанавливается
 исходная последовательность.
 
-Эта методика называется методом дробовика ({\it англ.} shotgun sequencing).
+Эта методика называется методом дробовика ({\it англ.} shotgun sequencing)  \cite{shotgun1} \cite{shotgun2}.
 
 \section{Секвенирование методом double-barrel shotgun sequencing}
 
@@ -157,7 +159,7 @@ sequence alignment)
 Некоторые новые методы секвенирования позволяют читать длинный кусок с двух сторон, то есть для каждой
 прочитанной строки будет известна строка, находящаяся от нее на некоторм фиксированном расстоянии.
 Метод, который использует эту дополнительную информацию (paired-end data) называют double-barrel shotgun
-sequencing.
+sequencing \cite{pairedend1}.
 
 \subsection{Описание алгоритмической задачи}
 
@@ -171,8 +173,7 @@ $n$ друг от друга (параметры $n$ и $k$ зависят от используемого метода).
 то строки $X$ и $Y=P T B T A T S$ никак не различить по исходным данным. На практике алгоритмы получают набор
 контигов~--- строки, которые гарантированно входили в исходную ДНК. В дальнейшем из них можно собрать
 исходную последовательность с помощью дополнительных данных, либо использовать их напрямую (например для 
-генетического анализа)
+генетического анализа) \cite{pairedend1}.
 
-%\section{Выводы по главе \protect\ref{chapter1}}
-%[TODO]
-%\label{summary_1}
+\section{Выводы по главе \protect\ref{chapter1}}
+Рассмотрены основы биоинформатики, описаны исследуемые объекты и различные методики, применяемые на первои  стадии процесса секвенирования. Объяснено понятие paired-end данных, и сформулирована задача секвенирования ДНК по этим данным.
