--- a/my/parts/chapter2.tex
+++ b/my/parts/chapter2.tex
@@ -1,3 +1,4 @@
+%-*- coding: cp1251 -*-
 \chapter{Описание текущих используемых подходов к задаче секвенирования} 
 \label{chapter2}
 
@@ -18,9 +19,7 @@
 что все $x_i$ входят в нее в качестве подстроки.
 
 Данная задача является $\mathcal{NP}$-полной, следовательно маловероятно что у нее
-существует достаточно эффективное решение.
-
-%TODO: ссылки
+существует достаточно эффективное решение \cite{npcomplete}.
 
 \subsection{Формулировка задачи как поиск гамильтонова пути}
 
@@ -28,7 +27,8 @@
 соответствует чтению $x_i$, каждое ребро $(v_i, v_j)$~--- перекрытию между строками $x_i$ и $x_j$.
 В графе $G$ требуется найти гамильтонов путь~--- путь, проходящий через каждую вершину ровно один раз.
 
-Как и задача о наименьшей надстроке, данная задача $\mathcal{NP}$-полна.
+Как и задача о наименьшей надстроке, данная задача
+$\mathcal{NP}$-полна \cite{npcomplete} \cite{clrs}.
 
 \subsection{Формулировка задачи как поиск эйлерова пути}
 
@@ -51,22 +51,22 @@
 
 \section{Алгоритмы решения задачи секвенирования методом дробовика}
 
-На основе различных формализаций задачи базируются алгоритмы решения задачи:
+На основе различных формализаций задачи базируются алгоритмы решения
+задачи \cite{algorithms}.
 
 \subsection{Алгоритмы на основе поиска эйлерова пути}
 
 Строится граф де Брейна, соответствующий формулировке задачи. После этого в нем ищется эйлеров путь одним
 из известных эффективных алгоритмов.
 
-Данный метод используют следующие системы секвенирования: EULER, Velvet, ABySS
+Данный метод используют следующие системы секвенирования: EULER,
+Velvet, ABySS \cite{abyss}\cite{abyss2}\cite{velvet}\cite{euler}.
 
 \subsection{Алгоритмы на основе жадного решения задачи о наименьшей надстроке}
 
 В связи с тем, что задача о наименьшей надстроке $\mathcal{NP}$-полна, на данный момент не
 известно эффективных методов ее решения. Тем не менее, существует простой жадный алгоритм,
-дающий неплохие результаты на практике.
-
-Данный метод используют следующие системы: ?%TODO
+дающий неплохие результаты на практике \cite{sequencing1}.
 
 \subsection{Алгоритм overlap-layout-consensus}
 
@@ -105,6 +105,7 @@
 
 %\section{Обзор существующих систем секвенирования}
 
-%[TODO]
+\section{Выводы по главе \protect\ref{chapter2}}
+Выполнен обзор существующих методик решения обычнои  задачи секвенирования и задачи секвенирования с применением paired-end информации. Известные методы секвенирования на основе paired-end информации недостаточно полно используют имеющиеся разработки по задаче обычного секвенирования.
 
-%\section{Выводы по главе \protect\ref{chapter2}}
+Все известные методы устранения ошибок являются эвристическими, в то время как требуется разработать алгоритм, которыи  не зависит от эвристик.
