--- a/my/parts/chapter3.tex
+++ b/my/parts/chapter3.tex
@@ -1,11 +1,12 @@
-\chapter{Новый подход к решению задачи с использованием paired-end данных}
+%-*- coding: cp1251 -*-
+\chapter{Разработанные алгоритмы}
 \label{chapter3}
 
 \section{Граф де Брейна}
 
 Графом де Брейна $k$-ого порядка называют ориентированный граф, в котором вершинам соответствуют строки длины $k$,
 а ребрам~--- строки длины $k+1$, причем ребра идут из вершины, соответствующей префиксу строки ребра, в вершину,
-соответствующую суффиксу.
+соответствующую суффиксу \cite{debrujin}.
 
 \begin{figure}[h]
 \center{
@@ -21,7 +22,7 @@
 
 \section{Алгоритм восстановления цельных фрагментов по известным концам и длине}
 
-Бужес решать следущую задачу: по набору пар чтений ${(u_i, v_i)}$ (каждое чтение длинной $k$) и длине исходного
+Будем решать следущую задачу: по набору пар чтений ${(u_i, v_i)}$ (каждое чтение длинной $k$) и длине исходного
 фрагмента $m$ восстановить набор исходных фрагментов.
 
 \begin{figure}[h]
@@ -157,7 +158,7 @@ $\sum_{i=0}^{\const{maxDepth}}d^i=\frac{d^{\const{maxDepth}+1}-1}{d-1}=O(d^{\con
 %соответствует уникальному фрагменту. Для устранения неопределенностей такого рода воспользуемся
 %следующим наблюдением: 
 
-\subsection{Выявление ошибок чтения}
+\subsection{Исправление ошибок чтения}
 
 Модифицировав данный алгоритм, можно получить эффективный метод устранения ошибочных чтений. 
 
@@ -206,21 +207,46 @@ $\sum_{i=0}^{\const{maxDepth}}d^i=\frac{d^{\const{maxDepth}+1}-1}{d-1}=O(d^{\con
 \end{codebox}
 \end{algorithm}
 
-\subsection{Оценка производительности}
+Можно пойти еще дальше, для каждой вершины построив матрицу $A$, такую
+что $A_{ij}$ соответствует количеству путей, входящих в вершину по
+$i$-ому ребру и выходящих по $j$-ому. Тогда можно идентифицировать и
+разделить склеевшиеся по этой вершине последовательности:
 
-Предположим что исходная последовательность является случайной последовательностью оснований длиной $n$.
-Тогда в графе де Брейна в среднем будет $n - 1 + 4 n \frac{n}{2^{n-1}}$, значит средняя степень вершины
-будет $d \approx 1 + \frac{n}{2^{k-3}}$. Среднее время, затраченное на поиск всех путей между парой вершин
-будет $O(d^{m-k})$. 
+\begin{figure}[h]
+\center{
+\includegraphics[width=500pt]{pic/unmerge.eps}
+}
+\caption{}
+\end{figure}
 
-При $m=200,k=36$ алгоритм остается эффективным при $n \approx 10^8$.
+\subsection{Сжатый граф де Брейна}
 
-%TODO доказательства
+В случае если ошибок чтения немного и $k$ выбрано достаточно большим,
+большая часть вершин в графе де Брейна имеет ровно одно входящее и
+одно исходящее ребро. цепочки таких вершин можно сжать, заменив их
+ребрами с целыми последовательностями вместо отдельных оснований.
 
-Если в алгоритме использовать метод meet-in-the-middle вместо простого перебора, оценку можно улучшить до
-$O(d^{\frac{n-m}{2}})$.
+В сжатом виде граф занимает меньше места в памяти, кроме того на нем
+быстрее работают алгоритмы восстановления последовательностей.
 
-При $m=200,k=36$ такой алгоритм можно эффективно применять для $n \approx 10^9$.
+\subsection{Оптимизации}
+
+Для алгоритма исправления ошибок нужна только информация о том, по
+каким ребрам может проходить восстановленная последовательность,
+поэтому нет смысла дважды рассматривать в рекурсивном обходе одну и ту
+же вершину, если по дороге в нее мы прошли одно и то же расстояние.
+
+Более формально, рекурсивный обход можно заменить на метод
+динамического программирования по состояниям (вершина, расстояние до
+стартовой вершины). Таким образом сложность алгоритма уменьшается с
+экспоненциальной до линейной от размера графа.
+
+Кроме того, можно заметить что нет смысла рассматривать состояние если
+кратчайшее расстояние до конечной вершины + уже пройденное превосходит
+искомую длину пути.
+
+Асимтотически эта оптимизация ничего не дает, но на практике
+отсекается более $3/4$ состояний
 
 \section{Общая схема системы}
 
@@ -228,67 +254,28 @@ $O(d^{\frac{n-m}{2}})$.
 
 \begin{enumerate}
 \item Построить граф де Брейна
-\item Провести первую итерацию алгоритма восстановления фрагментов
-\item Воспользовавшись полученной информацией о частоте использования вершин
-удалить ошибочные вершины из графа
-\item Провести вторую итерацию алгоритма
-\item Воспользоваться одним из общих алгоритмов секвенирования, не
-использующий информацию о парах
+\item Построить его сжатую форму
+\item Сделать одну или несколько итераций алгоритма исправления ошибок
+  и разделения склеившихся путей
+\item Последовательности на ребрах получившегося графа считать результирующими контигами
 \end{enumerate}
 
 \section{Масштабируемость системы}
 
-Алгоритмы 1, 2 и 3 обрабатывают все пары чтений полностью независимо. В связи с этим
-метод хорошо поддается масштабированию на распределенные системы.
+Все этапы алгоритма поддается почти линейному масштабированию на распределенные системы.
 
 Рассмотрим схему такой распределенной системы:
 \begin{enumerate}
-\item Построить граф де Брейна на центральном узле и раздать его всем остальным узлах
-(либо хранить его в некоторой распределенной базе данных).
-\item Равномерно распределить пары по узлам.
-\item Каждый узел выполняет алгоритм 3 на прикрепленных к нему парах.
-\item Полученные веса вершин суммируются по всем узлам.
-\item Из графа удаляются ошибочные вершины и граф снова раздается узлам.
-\item Узлы выполняют алгоритм 1 или алгоритм 2 на прикрепленных к нему парах.
-\item Восстановленные фрагменты собираются и передаются алгоритму решения обычной задачи секвенирования.
+\item Построить граф де Брейна в распределенной хеш-таблице.
+\item Сжать его, при этом каждая ребро можно строить независимо.
+\item Сжатый граф раздать нодам и выполнить алгоритм восстановления
+  путей независимо для всех пар.
+\item Собрать полученную информацию о количестве прохождений по ребрам
+  и сделать коррекцию графа.
+\item Вернуть последовательности на ребрах графа в качестве результирующих контигов
 \end{enumerate}
 
-\section{Реализация алгоритма}
+\section{Выводы по главе \protect\ref{chapter3}}
 
-В рамках данной работы создана реализация метода на языке программирования
-Java. 
+Разработан алгоритм для сборки и схема его масштабирования.
 
-\section{Экспериментальные данные}
-
-Идеальные данные без ошибок симулировались следующем образом: из образца ДНК брались все возможные
-фрагменты длиной $m$. В качестве данных брались пары (префикс, суффикс), полученные из этих 
-фрагментов.
-
-На симулированных данных без ошибок для генома Escherichia Coli алгоритм восстанавливает $98\%$ фрагментов,
-что обеспечивает $99.5\%$ покрытия исходной последовательности.
-
-Зашумленные данные симулировались следующем образом: фиксированное число раз из образца ДНК проводилось
-чтение: выбиралась случайная длина фрагмента по нормальному распределению с матожиданием $m$ и заданной
-дисперсией, случайным образом выбирался фрагмент полученной длины, бралась пара (префикс, суффикс) и
-в нее вносились случайным образом ошибки в соответствии со статистикой ошибок в реальных данных.
-
-На симулированных сильно зашумленных данных ($60\%$ чтений с хотя бы одной ошибкой) для генома Haemophilus
-Influenzae алгоритм возвращает $0.01\%$ ошибочных фрагментов и обеспечивает $99.5\%$ покрытия исходной
-последовательности.
-
-%\subsection{Результаты численных экспериментов}
-
-%[TODO]
-
-%\subsection{Сравнение с результатами существующих систем}
-
-%[TODO]
-
-%\section{Направления дальнейшей работы}
-
-%Данный метод хорошо поддается масштабированию, так как каждую
-%пару можно обрабатывать независимо друг от друга.
-
-%\section{Выводы по главе \protect\ref{chapter3}}
-
-%[TODO]
