--- a/my/parts/intro.tex
+++ b/my/parts/intro.tex
@@ -1,45 +1,44 @@
+%-*- coding: cp1251 -*-
 \startprefacepage
 
 \underline{\bfАктуальность темы.} Многие задачи современной биологии, а так же 
-медицинские методы диагностики требуют требуют знание нуклеотидных
+медицинские методы диагностики основаны на обработке нуклеотидных
 последовательностей ДНК и РНК живых организмов. В связи с этим возникает
 необходимость в дешевых и быстрых методиках секвенирования (получения этой
-информации по физическому образцу). В настоящее время такие методики разработаны
-и активно применяются. Все они включают несколько этапов: снятие информации
-с физического носителя, молекулы ДНК или РНК, и последующая обработка
-полученной информации на вычислительной технике. При этом в связи с большим
-объемом данных, а так же с возможной неточностью данных, полученных на
+информации по физическому образцу). В настоящее время существует
+множество методик для этого. Все они состоят несколько этапов: считывания информации
+с физического носителя, молекулы ДНК или РНК, и последующая сборка
+последовательности исходя из полученной информации на вычислительной технике. В связи с большим
+объемом данных, а так же с неизбежной неточностью данных, полученных на
 первом этапе, возникает необходимость в разработке эффективных, легко
-масштабируемых, точных и устойчивых к ошибкам алгоритмах секвенирования.
-При этом, ранее разработанные алгоритмы для решения обычной задачи секвенирования
-не подходят для новых методик, в связи с новым форматом данных (так называемые
-paired-end данные).
+масштабируемых, точных и устойчивых к ошибкам алгоритмах сборки.
+При этом, ранее разработанные алгоритмы для решения классической задачи сборки
+не применимы в методиках секвенирования нового поколения,
+в связи с новым форматом (так называемые paired-end данные). 
 
-\underline{\bfОбъект исследования}~--- задача секвенирования последовательности
-ДНК по данным, получаемым методиками считывания с paired-end информацией.
+\underline{\bfОбъект исследования}~--- задача сборки последовательности
+ДНК по данным, получаемым методиками считывания с paired-end информацией данными.
 
 \underline{\bfЦель исследования} состоит из следующих частей:
 \begin{itemize}
 \item
-разработать эффективный алгоритм восстановления исходной последовательности
+разработать эффективный распределенный алгоритм сборки исходной последовательности
 по чтениям с paired-end информацией.
 \item
 разработать на основе полученного алгоритма методику устранения ошибок чтения,
 возникших в результате неточности измерений в первой фазе секвенирования.
 \item
-реализовать программное обеспечение ЭВМ, реализующее разработанные алгоритмы
-и проверить их эффективность экспериментально.
+реализовать программное обеспечение ЭВМ, реализующее разработанный алгоритм
+и проверить его эффективность экспериментально.
 \end{itemize}
 
 Для достижения цели требуется решить следующие \underline{\bfзадачи}:
 \begin{enumerate}
 \item
-Разработать алгоритм для сведения задачи секвенирования с применением paired-end
-данных к хорошо изученной обычной задаче секвенирования.
+Разработать алгоритм для задачи сборки ДНК с применением paired-end.
 \item
-Разработать алгоритм для выявления и устранения ошибочных чтений.
-\item
-Оценить эффективность и масштабируемость полученных решений.
+Разработать схему распределения алгоритма в кластере для сборки
+больших геномов.
 \item
 Реализовать алгоритмы ввиде программы для ЭВМ.
 \item
@@ -48,10 +47,9 @@ paired-end данные).
 
 %\underline{\bfМетоды исследования}
 
-\underline{\bfНаучная новизна.} В бакалаврской работе разработан новый
+\underline{\bfНаучная новизна.} В магистерской диссертации разработан новый
 подход к решению задачи секвенирования с использованием paired-end информации, а
-так же создан очень эффективный метод фильтрации ошибок чтения.
-
+так же создан эффективный метод фильтрации ошибок чтения и разрешения повторов.
 
 Кроме того, разработано программное обеспечение, реализующее созданные методики
 и проведены численные эксперименты с ним.
@@ -61,7 +59,7 @@ paired-end данные).
 нового поколения для получения дешевого и быстрого инструмента для исследований
 в различных областях биологии, а так же в диагносических целях.
 
-\underline{\bfСтруктура работы.} Работа состоит из введения, 3 глав и заключения.
+\underline{\bfСтруктура работы.} Работа состоит из введения, 4 глав и заключения.
 
 В главе 1 приведен обзор биоинформатики, описаны исследуемые объекты и рассмотрены
 различные методики, применяемые на первой стадии процесса секвенирования. Описано,
@@ -70,5 +68,8 @@ paired-end данные).
 В главе 2 проведен обзор существующих методик решения обычной задачи секвенирования
 и задачи секвенирования с использованием paired-end информации.
 
-В главе 3 подробно описаны разработанный в данной бакалаврской работе алгоритмы,
-а так же методики численных экспериментов и их результаты.
+В главе 3 подробно описаны разработанные в данной диссертации
+алгоритмы.
+
+В главе 4 описаны детали реализации а так же методики численных
+экспериментов и их результаты.
