--- a/my/parts/outro.tex
+++ b/my/parts/outro.tex
@@ -1,20 +1,19 @@
+%-*- coding: cp1251 -*-
 \startconclusionpage
 
 Приведем результаты работы, выносимые на защиту:
 
 \begin{itemize}
 \item
-разработан алгоритм сведения задачи секвенирования с использованием paired-end
-данных к обычной задаче секвенирования;
+разработан масштабируемый алгоритм сборки ДНК с использованием paired-end
+данных;
 \item
-разработан высокоточный алгоритм устранения ошибок чтения;
+проведен теоретический анализ эффективности созданного алгоритма;
 \item
-проведен теоретический анализ эффективности созданных алгоритмов;
+реализован разработанный алгоритм ввиде программы для ЭВМ;
 \item
-реализованы разработанные алгоритмы ввиде программы для ЭВМ;
-\item
-проведены численные эксперименты на синтетических данных, построенных из
-реальных ДНК живых организмов и проведен анализ полученных результатов.
+проведены численные эксперименты на синтетических и реальных данных
+и проведен анализ полученных результатов.
 \end{itemize}
 
-Таким образом, поставленные задачи выполнены и цель достигнута.
+Таким образом, поставленные задачи выполнены и цель достигнута. 
