--- a/my/presentation/presentation.tex
+++ b/my/presentation/presentation.tex
@@ -12,7 +12,7 @@
 университет информационных технологий, механики \\
 и оптики\\
 \vspace{0.4cm}
-Научный руководитель: д.т.н., проф. Шалыто~А.~А.}
+Научный руководитель: д.т.н., профессор Шалыто~А.~А.}
 \date{Санкт-Петербург\\2012 г.}
 
 \begin{document}
@@ -29,26 +29,26 @@
   Дезоксирибонуклеиновая кислота (ДНК).
   
   \begin{itemize}
-  \item<1-> Двойная спираль из двух полимерных цепочек.
-  \item<2-> Составные элементы~--- нуклеотиды.
-  \item<3-> Комплементарность (A-T, G-C).
+  \item Двойная спираль из двух полимерных цепочек.
+  \item Составные элементы~--- нуклеотиды.
+  \item Комплементарность (A-T, G-C).
   \end{itemize}
 }
 \frame {
   \frametitle{Метод секвенирования double-ended shotgun} 
 
   \begin{itemize}
-  \item<1-> Амплификация исходной ДНК.
-  \item<2-> Разрезание ДНК на фрагменты.
-  \item<3-> Выделение фрагментов подходящей длины ($ins=~250$ оснований).
-  \item<4-> Чтение префикса и суффикса каждого фрагмента (по $n=36$ оснований каждый).
-  \item<5-> Обработка полученных данных.
+  \item Амплификация исходной ДНК.
+  \item Разрезание ДНК на фрагменты.
+  \item Выделение фрагментов подходящей длины ($ins=~250$ оснований).
+  \item Чтение префикса и суффикса каждого фрагмента (по $n=36$ оснований каждый).
+  \item Обработка полученных данных.
   \end{itemize}
 
-%  \begin{figure}
-%    \center{
-%      \includegraphics[width=100mm]{../pic/general.svg.eps}
-%    }
+  \begin{figure}
+    \center{
+      \includegraphics[width=100mm]{../pic/general.svg.eps}
+    }
   \end{figure}
 }
 %\frame {
@@ -69,27 +69,27 @@
 %  \item<3-> Синтез полученных контигов в более длинные последовательности опираясь на paired-end данные.
 %  \end{itemize}
 %}
-\section{Предлагаемое решение}
+\section{Алгоритм восстановления фрагментов}
+%\frame{
+%  \frametitle{Схема решения}
+%  
+%  \begin{itemize}
+%  \item Фильтрация ошибок.
+%  \item Построение сжатого графа де Брейна.
+%  \item Удаление ошибочных ветвлений, используя paired-end данные.
+%  \item Схлоп полиморфных последовательностей.
+%  \item Раскрутка циклов с использованием paired-end данных.
+%  \end{itemize}
+%}
 \frame{
-  \frametitle{Схема решения}
-  
-  \begin{itemize}
-  \item<1-> Фильтрация ошибок.
-  \item<2-> Построение сжатого графа де Брейна.
-  \item<3-> Удаление ошибочных ветвлений, используя paired-end данные.
-  \item<4-> Схлоп полиморфных последовательностей.
-  \item<5-> Раскрутка циклов с использованием paired-end данных.
-  \end{itemize}
-}
-\frame{
-  \frametitle{Алгоритм восстановления фрагментов}
+  \frametitle{Описание}
   Построим по исходным данным сжатый граф де Брейна с
   последовательностями в вершинах длиной $k$ .
 
-%  \begin{figure}
-%    \center{
-%      \includegraphics[width=100mm]{../pic/debrujin.svg.eps}
-%    }
+  \begin{figure}
+    \center{
+      \includegraphics[width=100mm]{../pic/debrujin.svg.eps}
+    }
   \end{figure}
 
   Найдем места в графе, соответствующие началу и концу
@@ -100,29 +100,74 @@
   \frametitle{Оптимизации}
   
   \begin{itemize}
-  \item<1-> Отсечение по расстоянию до конечной вершины.
-  \item<2-> Динамическое программирование.
+  \item Отсечение по расстоянию до конечной вершины.
+  \item Динамическое программирование.
   \end{itemize}
 }
 \frame{
-  \frametitle{Использование алгоритма восстановления фрагментов}
-  
-  \begin{itemize}
-  \item<1->Устранение ошибочных ветвлений и разъединение слипшихся путей.
-  \item<2->Разворачивание циклов.
-  \end{itemize}
+  \frametitle{Устранение ошибочных ветвлений и разъединение слипшихся
+    путей}
+  \begin{figure}
+    \center{
+      \includegraphics[width=100mm]{../pic/unmerge.eps}
+    }
+  \end{figure}
 }
 \section{Результаты}
 \frame {
-  \frametitle{Escherichia Coli}
+  \frametitle{Haemophilus influenzae}
   
+Источник данных - симуляция Illumina на референсном геноме
   \begin{itemize}
-    \item<1-> Покрытие генома контигами: $95\%$
-    \item<2-> Количество контигов длиннее $100$ оснований: $2800$
-    \item<2-> Самый длинный контиг: $35419$ оснований
-    \item<3-> $N50=6375$
+    \item Размер референс-генома: $1'800'000$ оснований
+    \item $100\%$ сборка - $1$ контиг, равный референсной последовательности
+    \item Построение графа: $9$ минут на $1$ ноде, $512$ MiB памяти
+    \item Сборка: $15$ минут на $1$ нодах, $512$ MiB памяти
   \end{itemize}
 }
+\frame {
+  \frametitle{Escherichia Coli}
+  
+Данные эксперимента SRR001665
+  \begin{itemize}
+    \item Размер референс-генома: $4'600'000$ оснований
+    \item Покрытие генома контигами: $95\%$
+    \item Количество контигов длиннее $100$ оснований: $2'384$
+    \item Самый длинный контиг: $35'419$ оснований
+    \item $N50=7'800$
+    \item Построение графа: $17$ минут на $1$ ноде, $1024$ MiB памяти
+    \item Сборка: $18$ минут на $4$ нодах, $256$ MiB памяти на каждой
+  \end{itemize}
+}
+\frame {
+  \frametitle{Фрагмент данных dnGASP}
+  
+Симуляция paired-end чтений без ошибок на
+фрагменте тестовых данных dnGASP
+  \begin{itemize}
+    \item Размер референсного генома: $50'000'000$ оснований
+    \item Покрытие генома контигами: $95\%$
+    \item Количество контигов длиннее $100$ оснований: $5'012$
+    \item Самый длинный контиг: $2'000'370$ оснований
+    \item $N50=75'600$
+    \item Построение графа: $2$ часов на $4$ нодах, $4096$ MiB памяти
+    \item Сборка: $1.5$ часа на $4$ нодах, $2048$ MiB памяти на каждой
+  \end{itemize}
+}
+\frame {
+  \frametitle{Drosophila Melanogaster}
+  
+Данные эксперимента SRR094875
+  \begin{itemize}
+    \item Референс-геном отсутствует, примерный размер $130'000'000$ оснований
+    \item Количество контигов длиннее $100$ оснований: $55'607$
+    \item Самый длинный контиг: $112'370$ оснований
+    \item $N50=6'600$
+    \item Построение графа: $8$ часов на $4$ нодах, $8192$ MiB памяти
+    \item Сборка: $6$ часов на $6$ нодах, $2048$ MiB памяти на каждой
+  \end{itemize}
+}
+\section{Вопросы}
 \frame {
   \frametitle{Спасибо за внимание!}
   Вопросы?
