--- a/my/thesis.tex
+++ b/my/thesis.tex
@@ -41,7 +41,7 @@
 \theoremstyle{plain}
 \newtheorem{theorem}{Теорема}
 \newtheorem{prop}[theorem]{Утверждение}
-\newtheorem{corollary}[theorem]{Следствие}
+\newtheorem{corollary}[theorem]{Следствие} 
 \newtheorem{lemma}[theorem]{Лемма}
 \newtheorem{question}[theorem]{Вопрос}
 \newtheorem{conjecture}[theorem]{Гипотеза}
@@ -120,7 +120,7 @@
 \pagestyle{title}
 
 \begin{center}
-Санкт-Петербургский государственный университет \\ информационных технологий, механики и оптики
+Санкт-Петербургский национальный исследовательский университет \\ информационных технологий, механики и оптики
 
 \vspace{2cm}
 
@@ -135,7 +135,7 @@
 \vspace{2cm}
 
 \vbox{\LARGE\bfseries
-Разработка системы секвенирования ДНК с использованием paired-end данных.
+Алгоритмы и реализация решения задачи сборки ДНК из paired-end данных для сверхбольших геномов.
 }
 
 \vspace{4cm}
@@ -144,7 +144,7 @@
 
 \vspace{6cm}
 
-Санкт-Петербург\\ 2010
+Санкт-Петербург\\ 2012
 \end{center}
 
 \newpage
@@ -169,10 +169,10 @@
 \input{parts/chapter1.tex}
 \input{parts/chapter2.tex}
 \input{parts/chapter3.tex}
-%\input{parts/chapter4.tex}
+\input{parts/chapter4.tex}
 \input{parts/outro.tex}
 
-%\bibliography{thesis}
+\bibliography{thesis}
 
 %\startappendices
 %\input{parts/appendix1.tex}
